// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Date Component should return Date and Time value if format attribute is not passed 1`] = `
<FormattedDate
  format="fullDateTime"
>
  <n
    ago={false}
    calendar={false}
    decimal={false}
    element={null}
    filter={[Function]}
    format="MMMM Do YYYY, h:mm:ss a"
    fromNow={false}
    interval={60000}
    local={false}
    onChange={[Function]}
    titleFormat=""
    toNow={false}
    trim={false}
    unit={null}
    unix={false}
    utc={false}
    withTitle={false}
  >
    <time
      dateTime={"2021-02-25T01:11:21.000Z"}
    >
      February 25th 2021, 6:41:21 am
    </time>
  </n>
</FormattedDate>
`;

exports[`Formatted Date Component should return Date and Time value if format is set as dateOnly 1`] = `
<FormattedDate
  format="fullDateTime"
>
  <n
    ago={false}
    calendar={false}
    decimal={false}
    element={null}
    filter={[Function]}
    format="MMMM Do YYYY, h:mm:ss a"
    fromNow={false}
    interval={60000}
    local={false}
    onChange={[Function]}
    titleFormat=""
    toNow={false}
    trim={false}
    unit={null}
    unix={false}
    utc={false}
    withTitle={false}
  >
    <time
      dateTime={"2021-02-25T01:11:21.000Z"}
    >
      February 25th 2021, 6:41:21 am
    </time>
  </n>
</FormattedDate>
`;

exports[`Formatted Date Component should return Date only value if format is set as dateOnly 1`] = `
<FormattedDate
  format="dateOnly"
>
  <n
    ago={false}
    calendar={false}
    decimal={false}
    element={null}
    filter={[Function]}
    format="DD/MM/YYYY"
    fromNow={false}
    interval={60000}
    local={false}
    onChange={[Function]}
    titleFormat=""
    toNow={false}
    trim={false}
    unit={null}
    unix={false}
    utc={false}
    withTitle={false}
  >
    <time
      dateTime={"2021-01-09T01:11:21.000Z"}
    >
      09/01/2021
    </time>
  </n>
</FormattedDate>
`;
